style: fix the error on mobile deves

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -52,10 +52,6 @@
   background-size: cover;
 }
 
-.home__container {
-  min-height: 100vh;
-}
-
 .home__content {
   margin-top: 75px;
   display: flex;
